@@ -1,3 +1,15 @@
+.05
+
+Added string length length to the diags diags
+
+Corrected level problem cmp_results
+
+.04
+
+Got rid of undef warning when no name supplied
+
+got rid of unneeded result counting in hceck_test
+
 .03
 
 Can now capture test output in a veriety of ways, although at the moment I'm
